--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -13,7 +13,9 @@
     }
     .c-featurePager__resultSummary {
         white-space: nowrap;
-        margin-bottom: 1.5rem;
+        margin: 0 auto 1.5rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
         .start,
         .end {
             display: inline-block;
@@ -23,7 +25,9 @@
     }
     .c-featurePager__navButtons {
         white-space: nowrap;
-        margin-bottom: 1.5rem;
+        margin: 0 auto 1.5rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
         .icon {
             margin: 0 0.75rem 0 0;
             padding: 0 0.75rem;
@@ -39,35 +43,39 @@
             position: relative;
             top: -0.05rem;
             margin-left: 1rem;
-            margin-right: 0.5rem;
+            margin-right: 0.85rem;
             text-align: center;
             border: 1px solid #ccc;
         }
         .c-pager__counterWrapper {
             margin-right: 1rem;
             margin-bottom: 1.5rem;
+
             span {
                 padding: 0;
                 margin: 0;
                 width: 15px;
             }
+
             .c-pager__counterMax {
                 padding: 0 1rem;
             }
-            .c-featurePager__itemCount {
-                white-space: nowrap;
-
-                .react-numeric-input {
-                    padding-right: 2rem;
-                    padding-left: 0.5rem;
-                }
-                input {
-                    margin-left: 0.5rem;
-                    padding: 0.5rem 0;
-                    text-align: center;
-                    width: 6rem;
-                }
-            }
+        }
+    }
+    .c-featurePager__itemCount {
+        white-space: nowrap;
+        margin: 0 auto;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        .react-numeric-input {
+            padding-right: 2rem;
+            padding-left: 0.5rem;
+        }
+        input {
+            margin-left: 0.5rem;
+            padding: 0.5rem 0;
+            text-align: center;
+            width: 6rem;
         }
     }
 }
