Style Images mobile improve, breadcrumbs larger font n' fix for stragglers, Transcript control buttons adj

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1046,7 +1046,7 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         min-height: 3rem;
         font-size: 1.25rem;
         /*  min-width: 40vw;*/
-        background-color: #fcfcfc;
+        background-color: #fff;
         overflow: visible;
         padding: 0.25rem 0.5rem 0.5rem !important;
         .shanticon-audio-video::before {
