--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -245,14 +245,14 @@
     white-space: nowrap;
 }
 .sui-advEdit-facet-ctrls-btns .btn-group > .btn:first-child {
-    border-radius: 1rem 0 0 1rem !important;
+    border-radius: 1.35rem 0 0 1.35rem !important;
     font-size: 1.85rem;
     padding: 0 1rem 0 1.25rem;
     text-align: center;
     padding-left: 1.25rem;
 }
 .sui-advEdit-facet-ctrls-btns .btn-group > .btn:last-child {
-    border-radius: 0 1rem 1rem 0 !important;
+    border-radius: 0 1.35rem 1.35rem 0 !important;
     font-size: 1.5rem;
     padding: 0.2rem 1.25rem 0 1rem;
     border-left-color: transparent;
@@ -293,9 +293,10 @@
     font-size: 1.5rem;
     padding: 0.1rem 1.25rem;
     margin: 0 0 0.5rem 1rem;
-    line-height: 1.85;
+    line-height: 1.6;
     color: #000;
-    width: 19rem;
+    width: 17rem;
+    transition: width 0.35s, line-height 0.35s;
 }
 
 .sui-advEdit-facet-ctrls-btns input::-webkit-input-placeholder {
@@ -334,6 +335,8 @@
     outline: 0 none;
     outline: none !important;
     border: 1px solid #668eec;
+    line-height: 1.8;
+    width: 19rem;
 }
 
 .sui-advPlus {
