--- a/kmaps-app/src/views/AudioVideo/AVViewer.css
+++ b/kmaps-app/src/views/AudioVideo/AVViewer.css
@@ -7,6 +7,7 @@
 }
 #av-viewer h1 {
     font-size: 1.85rem;
+    margin-left: 2rem;
 }
 .av .c-columnContent__main {
     overflow-x: hidden;
@@ -198,12 +199,12 @@ div#sui-transSrcGo input {
     flex-grow: 1;
     min-width: 12rem;
     border: 1px solid #d0d0d0 !important;
-    border-radius: 1.8rem;
+    border-radius: 2.25rem;
     background-clip: padding-box;
     font-size: 1.85rem;
-    height: 3.5rem;
+    line-height: 1;
     margin: 0 2rem 0 0;
-    padding: 0 4rem;
+    padding: 0 4rem 0 4.5rem;
     overflow: auto;
     vertical-align: middle;
     box-shadow: 0 0.5rem 1rem #aaa inset;
@@ -219,8 +220,8 @@ div#sui-transSrcGo input:focus {
 div#sui-transSrcGo .icon.search {
     position: absolute;
     left: 1.7rem;
-    top: 0.65rem;
-    font-size: 1.75rem;
+    top: 0.95rem;
+    font-size: 1.95rem;
     color: #999;
 }
 .firefox div#sui-transSrcGo .icon.search {
@@ -262,7 +263,7 @@ div#sui-transSrcGo button.search .icon::before {
 
 div#sui-transSrcGo .icon.clear {
     position: absolute;
-    top: 0.4rem;
+    top: 0.8rem;
     right: 3.25rem;
     z-index: 10;
     color: #ccc;
