--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -30,7 +30,6 @@
     color: #fff;
     font-size: 24px;
     margin: -6px -42px 0 0;
-    cursor: pointer;
 }
 .sui-editBut:hover {
     color: #ccc;
@@ -162,7 +161,6 @@
     border: 1px solid #999;
     height: 23px;
     line-height: 18px;
-    cursor: pointer;
 }
 .sui-typeIcon {
     display: inline-block;
@@ -180,7 +178,6 @@
     border-radius: 0 8px 8px 0;
     width: 20px;
     height: 20px;
-    cursor: pointer;
     padding-top: 3px;
     text-align: center;
     font-size: 18px;
@@ -200,7 +197,6 @@
     border-radius: 0 0 8px 8px;
     display: inline-block;
     width: 138px;
-    cursor: pointer;
     border: 1px solid #999;
     padding: 12px;
     border: 1px solid #999;
@@ -219,7 +215,6 @@
     padding: 12px;
 }
 .sui-resDisplay {
-    cursor: pointer;
     display: inline-block;
     margin: 0 12px;
 }
@@ -263,14 +258,12 @@
     display: inline-block;
     color: #888;
     margin-left: -30px;
-    cursor: pointer;
 }
 .sui-itemIcon {
     display: inline-block;
     color: #fff;
     margin-left: -30px;
     font-size: 13px;
-    cursor: pointer;
     border-radius: 4px;
     text-align: center;
     width: 24px;
@@ -280,7 +273,6 @@
 }
 .sui-itemPic {
     width: 100px;
-    cursor: pointer;
     outline: 4px solid #d7d7d7;
     outline-offset: 4px;
     border-radius: 4px;
@@ -303,7 +295,6 @@
 .sui-itemTitle {
     display: inline-block;
     margin-left: 8px;
-    cursor: pointer;
 }
 .sui-itemTitle:hover {
     color: #a4baec;
@@ -322,7 +313,6 @@
     font-style: italic;
     font-size: 11px;
     margin: 4px 0 4px 34px;
-    cursor: pointer;
 }
 .sui-itemAncestor:hover {
     color: #a4baec;
@@ -346,7 +336,6 @@
     height: 100px;
     width: 150px;
     margin-bottom: 2px;
-    cursor: pointer;
     overflow: hidden;
     border: 2px solid #ddd;
     text-align: center;
@@ -360,7 +349,6 @@
 }
 .sui-gridInfo {
     position: absolute;
-    cursor: pointer;
     color: #fff;
     margin-left: 128px;
     margin-top: -24px;
@@ -429,7 +417,6 @@
     color: #668eec;
 }
 .sui-advHeader {
-    cursor: pointer;
 }
 
 .sui-advTerm {
@@ -441,7 +428,6 @@
 }
 .sui-advTermRem {
     display: inline-block;
-    cursor: pointer;
     margin-left: 0.2rem;
     position: absolute;
     right: -1.45rem;
@@ -520,7 +506,6 @@ color: #a4baec;
     max-height: 360px;
 }
 .sui-advEditLine {
-    cursor: pointer;
     color: #000;
     padding: 0.2rem 1rem;
     border-bottom: none !important;
@@ -550,7 +535,6 @@ color: #a4baec;
     margin-top: 4px;
     padding: 0 12px;
     border: 1px solid #999;
-    cursor: pointer;
     text-align: center;
     float: right;
     color: #fff;
@@ -570,7 +554,6 @@ color: #a4baec;
 }
 .sui-tree li a {
     line-height: 19px;
-    cursor: pointer;
 }
 .sui-tree > ul > li > a {
     color: #3b4c56;
@@ -719,7 +702,6 @@ color: #a4baec;
     padding: 5px;
     vertical-align: -1px;
     margin-right: 12px;
-    cursor: pointer;
     border-radius: 32px;
     width: 18px;
     height: 18px;
@@ -728,7 +710,6 @@ color: #a4baec;
 .sui-termAssetBut {
     display: inline-block;
     text-transform: uppercase;
-    cursor: pointer;
     padding: 6px 18px 6px 12px;
     color: #fff;
     margin: 8px 16px 24px 0;
@@ -831,7 +812,6 @@ color: #a4baec;
     font-weight: 500;
     font-size: 12px;
     color: #888;
-    cursor: pointer;
     border: 1px solid #999;
     border-bottom: none;
 }
@@ -858,7 +838,6 @@ color: #a4baec;
     text-align: center;
 }
 .sui-avMore2 {
-    cursor: pointer;
     border: 1px solid #ccc;
     border-left: none;
     border-right: none;
@@ -882,7 +861,7 @@ color: #a4baec;
     font-weight: 500;
     font-size: 2.1rem;
     color: #ccc;
-    cursor: pointer;
+    cursor: default;
     padding-top: 1.8rem;
     border-right: 1px solid #ccc;
     transition: background-color 0.4s;
@@ -923,14 +902,15 @@ color: #a4baec;
 }
 .sui-transRow {
     padding: 0.5rem 1.5rem;
-    cursor: pointer;
+    cursor: default;
 }
 .sui-transRow:hover {
     background-color: #f5f5f5;
 }
 .sui-transOps .sui-transRow:first-child {
-    font-style: italic;
-    font-size: 1.25rem;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    letter-spacing: 0.125rem;
 }
 .sui-transLab {
     padding: 0.75rem 1.2rem;
@@ -938,11 +918,13 @@ color: #a4baec;
     color: #333;
     font-weight: 600;
     font-size: 1.5rem;
+    cursor: default;
 }
 .sui-transCheck {
     float: right;
     color: #ccc;
     font-size: 1.25rem;
+    cursor: default;
 }
 .trans-opts-close {
     font-size: 1.5rem;
@@ -970,14 +952,12 @@ color: #a4baec;
     float: right;
     color: #ccc;
     font-size: 20px;
-    cursor: pointer;
     /*  border-radius: 16px;
     width: 25px;
     padding: 2px 0 0 4px;*/
     margin: 6px 44px 0 0;
 
     font-size: 22px;
-    cursor: pointer;
     margin: 6px 15px 0 0;
 }
 .sui-transMinPlay:hover {
@@ -995,6 +975,10 @@ color: #a4baec;
 .sui-trans .sui-transSeg {
     border-radius: 1rem 0 0 1rem;
 }
+.sui-transSeg > div:first-of-type {
+    font-size: 1.75rem;
+    padding: 0.5rem 1rem;
+}
 .sui-transBox {
     /*  margin: 0 0 0 14rem; */
     background-color: #fff;
@@ -1006,7 +990,6 @@ color: #a4baec;
 .sui-transPlay {
     color: #fff;
     font-size: 1.75rem;
-    cursor: pointer;
     border-radius: 6px;
     width: 9rem;
     height: 2.6rem;
@@ -1031,7 +1014,6 @@ color: #a4baec;
     text-transform: capitalize;
     background-color: #cc4c39;
     font-weight: 600;
-    cursor: pointer;
     margin: 0 8px 12px 0;
 }
 .sui-spCat:hover {
@@ -1057,7 +1039,6 @@ color: #a4baec;
     color: #fff;
     line-height: 14px;
     font-weight: 900;
-    cursor: pointer;
     border-radius: 12px;
     text-align: center;
     font-size: 16px;
@@ -1089,7 +1070,6 @@ color: #a4baec;
     padding: 0 8px;
     width: 120px;
     font-weight: 600;
-    cursor: pointer;
     border-radius: 16px;
     border: 1px solid #aaa;
     margin: 4px 0 4px -32px;
@@ -1120,7 +1100,6 @@ color: #a4baec;
     font-weight: 500;
     font-size: 12px;
     color: #fff;
-    cursor: pointer;
     border-left: 1px solid #eee;
     border-right: 1px solid #eee;
     height: 24px;
@@ -1168,7 +1147,6 @@ color: #a4baec;
     background-color: #5d68cc;
     padding: 4px;
     width: 30px;
-    cursor: pointer;
 }
 .sui-caroButL:hover {
     opacity: 0.8;
@@ -1185,7 +1163,6 @@ color: #a4baec;
     background-color: #5d68cc;
     padding: 4px;
     width: 30px;
-    cursor: pointer;
 }
 .sui-caroButR:hover {
     opacity: 0.8;
@@ -1280,7 +1257,6 @@ color: #a4baec;
     display: inline-block;
     height: 50px;
     margin-bottom: 4px;
-    cursor: pointer;
     border-radius: 3px;
     border: 2px solid #000;
 }
