--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -22,7 +22,8 @@
 }
 
 .c-image__viewer {
-    background-color: #222222;
+    background-color: #222;
+    border-top: 10px solid #b49c59;
     border-bottom: 10px solid #b49c59;
     width: 100%;
     border-radius: 1rem;
