--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -7,15 +7,14 @@
   background-color: #eee
   height: 100vh
   -webkit-tap-highlight-color: transparent
-  flex: none
   max-width: 140rem
   margin: 0
 
   &.astviewer
-    background-color: #fcfcfc
+    /*  background-color: #fcfcfc */
     padding-right: 0
     padding-left: 0
-    height: calc(100vh - 50rem)
+    /*  height: calc(100vh - 12rem) */
 
   .sui-content
     background-color: #eee
@@ -27,7 +26,7 @@
   #sui-results,
   .astviewer,
   .astviewer.texts #shanti-texts-container
-  height: calc(100vh - 50rem)
+    height: calc(100vh - 50rem)
 
 
 
@@ -346,7 +345,7 @@
     /* for mobile height
     min-height: 38rem
     background: #fff
-    border: 1px solid #ddd
+    border: 1px solid #ccc
     border-bottom: 1px solid #aaa
     border-top: none
     position: relative
@@ -356,6 +355,7 @@
     margin: 0 0 2rem
     min-width: 40rem
     width: 60%
+    max-width: 85rem
     height: calc(100vh - 12rem)
     background-color: white
     box-shadow: inset 0 -0.2rem 5px #ddd
@@ -1053,9 +1053,14 @@
 
   @media screen and (min-width: 768px)
     #shanti-texts-sidebar
+      max-width: 35rem
+
       .tab-content
         position: relative
         top: 1px
+
+    #shanti-texts-body
+      max-width: 90rem
 
       #shanti-texts-sidebar-tabs-tabpane-text_bibl .shanti-texts-field-label
         white-space: nowrap
@@ -1076,6 +1081,12 @@
     /* testing these two rulesets is for positioning book reader height */
     .l-site__wrap.texts
       margin: 0
+
+    #shanti-texts-sidebar
+      max-width: 100%
+
+    #shanti-texts-body
+      max-width: 90rem
 
     .astviewer.texts
       article.main-col
@@ -1214,23 +1225,18 @@
       color: #555 !important
 
 
-    #shanti-texts-sidebar
-      max-width: 30rem
-
-    #shanti-texts-body
-      min-width: 65%
 
 
 
 
-  @media screen and (min-width: 1440px)
+  @media screen and (min-width: 1600px)
     .astviewer.texts #shanti-texts-container
       margin: 0
 
     #shanti-texts-sidebar
       padding: 0
       margin-bottom: 2rem
-      max-width: 30%
+      max-width: 50rem
 
 
   @media print
