Style Kamps layout updates

--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -302,6 +302,7 @@
 
         &.active {
             color: #000;
+            position: relative;
             border-top: 0.2rem solid $color-subjects;
             &:hover {
                 border-bottom: 0.1rem solid #fff;
