--- a/kmaps-app/src/views/Kmaps/subjectsinfo.scss
+++ b/kmaps-app/src/views/Kmaps/subjectsinfo.scss
@@ -8,7 +8,7 @@ ndg, Nov. 11, 2020)
 @import '../../index-variables';
 
 .subjects .c-content__main__kmaps > .c-subject-info {
-    max-width: 85rem;
+    //  max-width: 85rem;
 }
 /*
 .c-content__main__kmaps .featured-image {
