--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -906,6 +906,37 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
     top: 0.2rem;
 }
 
+.c-buttonGroup__sortMode {
+    margin-top: -0.5rem;
+    margin-bottom: 0;
+    padding-left: 1rem;
+    * {
+        display: inline-block;
+    }
+
+    div {
+        margin-right: 1rem;
+
+        button {
+            background-color: transparent;
+            color: #333;
+            font-size: 1.3rem;
+            border-radius: 8px;
+            border-width: 2px;
+        }
+    }
+}
+
+.c-buttonGroup__sortMode-header {
+    font-size: 1.25rem;
+    margin-right: 0.8rem;
+    white-space: nowrap;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 2.5;
+    letter-spacing: 0.025rem;
+}
+
 // View Styles
 
 .c-view__wrapper {
