--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -914,16 +914,9 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
         display: inline-block;
     }
 
-    div {
+    select {
         margin-right: 1rem;
-
-        button {
-            background-color: transparent;
-            color: #333;
-            font-size: 1.3rem;
-            border-radius: 8px;
-            border-width: 2px;
-        }
+        border: none;
     }
 }
 
