--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -290,6 +290,8 @@ header.terms
     display: flex;
     flex-direction: column;
 
+    font-size: 120%;
+
     &.c-collection {
         h1.title {
             font-size: 2rem;
@@ -446,11 +448,10 @@ header.terms
             max-width: 24rem;
         }
         & > p {
-            font-size: 1.55rem;
+            font-size: 1.5rem;
             max-width: 23rem;
             margin: 0 0 1rem 0.85rem;
             line-height: 1.2;
-            font-style: italic;
             letter-spacing: 0.0375rem;
             font-family: 'GB Garamond', serif;
         }
@@ -725,11 +726,11 @@ header.terms
                 }
             }
             .header-label-count {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
                 letter-spacing: 0.125rem;
                 margin-left: 1rem;
-                font-style: italic;
                 font-weight: bold;
+                text-transform: uppercase;
                 .badge {
                     font-size: 1.1rem;
                     letter-spacing: 0.075rem;
@@ -757,6 +758,7 @@ header.terms
         button:first-of-type {
             background-color: #5963c9;
             opacity: 0.95;
+            line-height: 1.95;
             &:hover {
                 border-color: #ccc;
                 border-style: solid;
