--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -39,7 +39,8 @@
             }
         }
         span input {
-            line-height: 1.75;
+            line-height: 1.5;
+            width: 5rem;
             position: relative;
             top: -0.05rem;
             margin-left: 1rem;
@@ -65,7 +66,7 @@
     }
     .c-featurePager__itemCount {
         white-space: nowrap;
-        margin: 0 auto;
+        margin: 0 auto 1.5rem;
         padding-left: 1rem;
         padding-right: 1rem;
 
@@ -75,11 +76,11 @@
         }
         input {
             margin-left: 0.5rem;
-            padding: 0.5rem 0;
+            padding: 0.2rem 0;
             text-align: center;
-            width: 6rem;
+            width: 5rem;
             border-radius: 0.35rem;
-            line-height: 1.75;
+            line-height: 1.5;
         }
     }
 }
