--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -473,29 +473,33 @@ color: #a4baec;
 .sui-advEditBool {
     display: inline-block;
     cursor: default;
-    font-size: 0.9rem;
+    font-weight: bold;
+    font-size: 0.975rem;
     color: #4d59ca;
     border: 0.15rem solid #668eec;
-    border-radius: 0.75rem;
+    border-radius: 1rem;
 }
 .sui-boolItem:hover,
 .sui-advEditBool:hover {
-    border-color: #4d59ca;
+    border-color: $color-mandala;
     color: red;
+}
+.sui-boolItem {
+    border: none;
+    color: $color-mandala;
+    padding: 0.15rem 0.6rem 0.05rem 0.6rem;
+    margin: 0 0.25rem;
+    border: none;
 }
 .sui-advEditBool {
     position: relative;
     top: -0.15rem;
-    padding-left: 0.4rem;
-    padding-right: 0.15rem;
+    padding: 0.3rem 0.75rem 0.3rem 1rem;
     margin-left: 1.25rem;
+    margin-right: 0.25rem;
     background: #fff;
 }
-.sui-boolItem {
-    border: none;
-    color: #4d59ca;
-    padding: 0.1rem 0 0.05rem 0.3rem;
-}
+
 .sui-advEditBool .sui-boolItem:nth-of-type(2),
 .sui-advEditBool #sui-boolItem-places-0-NOT {
     padding-right: 0.25rem;
