--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -686,7 +686,7 @@ header.terms
         position: relative;
         background-color: #3f49b1;
         margin-right: -1rem;
-        transition: opacity 0.1s ease-in-out;
+        transition: opacity 0.35s ease-in-out;
         border-bottom: 0.6rem double #fff;
         display: flex;
         justify-content: space-between;
@@ -703,18 +703,12 @@ header.terms
             padding: 0.35rem 1.25rem 0.25rem 0.75rem;
             display: inline-block;
             border-radius: 2rem;
-            border: 1px dashed #999;
+            border: 0.2rem dashed #999;
             margin: 0.5rem 1rem 0.6rem 1.5rem;
 
-            .header-icon svg {
-                font-size: 2rem;
-                position: relative;
-                bottom: 0.275rem;
-                transition: all 0.2s ease-in-out;
-                transform: scale(1);
-            }
             &:hover {
                 opacity: 1;
+                border-width: 0.1rem;
 
                 .header-icon svg {
                     transform: scale(1.1);
@@ -725,12 +719,20 @@ header.terms
                     transform: scale(1.2);
                 }
             }
+            .header-icon svg {
+                font-size: 2rem;
+                position: relative;
+                bottom: 0.275rem;
+                transition: all 0.2s ease-in-out;
+                transform: scale(1);
+            }
             .header-label-count {
                 font-size: 1.2rem;
                 letter-spacing: 0.125rem;
                 margin-left: 1rem;
                 font-weight: bold;
                 text-transform: uppercase;
+
                 .badge {
                     font-size: 1.1rem;
                     letter-spacing: 0.075rem;
@@ -929,9 +931,15 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
 .sui-facetList-horiz {
     padding-right: 1.5rem;
     margin: 1rem 2rem 2rem;
-    padding: 1rem;
+    padding: 0.5rem 1rem 0.75rem;
+    transition: all 0.4s;
     border-radius: 0.75rem;
     border: 0.2rem dashed rgba(77, 89, 201, 0.5);
+
+    &:empty {
+        border: none;
+        margin: 0;
+    }
     > div {
         display: inline;
         padding-right: 1.5rem;
