--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -67,7 +67,9 @@
                 color: #000;
                 box-shadow: none;
                 background: transparent;
+
                 &:placeholder-shown {
+                    cursor: default;
                 }
                 &:focus,
                 &:active {
@@ -77,20 +79,19 @@
                     background: #fff;
                     border-bottom-width: 0.25rem;
                     border-bottom-color: $color-mandala;
+                    cursor: text;
+
                     &::-webkit-input-placeholder {
-                        /* Chrome/Opera/Safari */
                         color: transparent;
                     }
                     &::-moz-placeholder {
-                        /* Chrome/Opera/Safari */
                         color: transparent;
+                        cursor: text;
                     }
                     &:-ms-input-placeholder {
-                        /* Chrome/Opera/Safari */
                         color: transparent;
                     }
                     &:-moz-placeholder {
-                        /* Chrome/Opera/Safari */
                         color: transparent;
                     }
                 }
