--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -1,7 +1,8 @@
 @import '../../_index-variables.scss';
 
 #place-kmap-tabs-tabpane-map {
-    min-height: calc(100vh - 12rem);
+    //  min-height: calc(100vh - 12rem);
+    height: 80vh;
 }
 
 .c-place-names {
