--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -43,6 +43,7 @@
 .c-card__wrap--image {
     height: 12rem;
     overflow: hidden;
+    border-bottom: none;
 }
 .card-image,
 .card-img-top,
@@ -210,7 +211,9 @@
 }
 
 .c-card__content-field a {
-    font-weight: bold;
+    // font-weight: bold;
+    // border:none;
+    padding-bottom: 0.15rem;
 }
 .c-card__listItem--related .c-card__content-field {
     display: inline;
