Update boolean selector buttons

--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -159,8 +159,8 @@
 }
 .sui-advTerm {
     font-size: 1.175rem;
-    padding: 0.8rem 0.5rem 0.3rem 0;
-    margin: 0.5rem 0.5rem 0.2rem;
+    padding: 0.2rem 0.5rem 0.3rem 0;
+    margin: 0 0.5rem 0.2rem;
     text-transform: capitalize;
     cursor: default;
     color: #000;
@@ -184,7 +184,7 @@
 .sui-advTerm > div {
     display: inline-block;
     margin-right: 1.5rem;
-    margin-bottom: 0.75rem;
+    margin-top: 0.75rem;
     white-space: nowrap;
     position: relative;
     padding-bottom: 0.2rem;
