Style update selected filter labels layout

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -945,6 +945,7 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
     border-radius: 0.75rem;
     border: 0.2rem dashed rgba(77, 89, 201, 0.5);
     border-left: 0.3rem solid #6b77ea;
+    border-right: 0.3rem solid #6b77ea;
     background-color: #f9f9f9;
 
     &:empty {
