--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -165,9 +165,9 @@
     cursor: default;
     color: #000;
     background: #f7f7f7;
-    border: 1px dashed #c4c8ef;
+    border: 0.2rem dashed #c4c8ef;
     border-left: 0.3rem solid #6b77ea;
-    border-width: 0.2rem 0.1rem 0.2rem 0.3rem;
+    border-right: 0.3rem solid #6b77ea;
     border-radius: 0.5rem;
 }
 .l-column__search .sui-advTermRem {
