Style updates for feature pager, and anchor adj

--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -28,6 +28,7 @@
     }
     .navbar-brand {
         display: inline-block;
+        border-bottom: none;
         h1 {
             /* font-size: 1.5rem;
             display: inline;
