--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -28,31 +28,45 @@
         margin: 0 auto 1.5rem;
         padding-left: 1rem;
         padding-right: 1rem;
+
         .icon {
             margin: 0 0.75rem 0 0;
-            padding: 0 0.75rem;
+            padding: 0.6rem 0.75rem 0.6rem 1rem;
             color: #888;
             cursor: pointer;
             font-size: 90%;
+            background-color: transparent;
+            border-radius: 1.5rem;
+            border: 0.2rem solid #f0f0f0;
+            transition: all 0.4s;
             &:hover {
                 color: #555;
+                border-color: #888;
+                background-color: #fff;
+            }
+            &:active {
+                border-color: $color-mandala;
+                border-width: 0.1rem;
+                background-color: #fff;
             }
         }
         span input {
-            line-height: 1.5;
+            line-height: 1.15;
             width: 5rem;
             position: relative;
-            top: -0.05rem;
+            top: 0.1rem;
             margin-left: 1rem;
             margin-right: 0.85rem;
             text-align: center;
-            border: 1px solid #ccc;
+            border: 1px solid $color-mandala;
             border-radius: 0.35rem;
         }
         .c-pager__counterWrapper {
-            margin-right: 1rem;
+            margin-right: 2.5rem;
+            margin-left: 2.5rem;
             margin-bottom: 1.5rem;
-
+            font-style: italic;
+            font-size: 1.75rem;
             span {
                 padding: 0;
                 margin: 0;
