Style fix close btn on Filters col

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -796,6 +796,7 @@ header.terms
             }
             &:active {
                 transform: scale(0.95);
+                border: none;
             }
         }
     }
