--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -16,6 +16,7 @@
         margin: 0 auto 1.5rem;
         padding-left: 1rem;
         padding-right: 1rem;
+        font-size: 1.5rem;
         .start,
         .end {
             display: inline-block;
@@ -83,7 +84,7 @@
         margin: 0 auto 1.5rem;
         padding-left: 1rem;
         padding-right: 1rem;
-
+        font-size: 1.5rem;
         .react-numeric-input {
             padding-right: 2rem;
             padding-left: 0.5rem;
