--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -53,14 +53,19 @@
         }
         span input {
             line-height: 1.15;
-            width: 5rem;
+            width: 5.5rem;
             position: relative;
             top: 0.1rem;
             margin-left: 1rem;
             margin-right: 0.85rem;
             text-align: center;
-            border: 1px solid $color-mandala;
+            border: 1px solid #4d59ca;
             border-radius: 0.35rem;
+            border-width: 0.25rem 0.1rem;
+            opacity: 0.65;
+            &:hover {
+                opacity: 1;
+            }
         }
         .c-pager__counterWrapper {
             margin-right: 2.5rem;
