Style update for foldoutViewer fix slideshow buttons

--- a/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
+++ b/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
@@ -117,10 +117,10 @@
             width: 5rem;
             margin: auto 0;
             padding-left: 1rem;
-            cursor: pointer;
+            cursor: default;
 
             span {
-                display: inline-block;
+                display: block;
                 padding-top: 4.75rem;
             }
 
