--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -21,13 +21,17 @@ body.html {
 a {
     text-decoration: none;
     color: $link-color;
-    border-bottom: 0.2rem dotted #ccc;
-    &:hover,
+    border-bottom: 0.25rem dotted #c0c0c0;
+    transition: all 0.3s;
+    &:hover {
+        text-decoration: none;
+        box-shadow: none;
+        border-bottom-style: solid;
+        border-bottom-width: 0.15rem;
+    }
     &:focus,
     &:active {
-        text-decoration: none;
-        color: $link-hover-color;
-        border-bottom-color: $color-mandala;
+        border: none;
     }
 }
 .btn:not(:disabled):not(.disabled) {
