--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -111,6 +111,9 @@ ul.fancytree-container {
     &.selected > .c-kmapnode > .label {
         border-bottom: 0.3rem solid #cca843;
         line-height: 2.25;
+        a {
+            border-bottom: 0.3rem solid #cca843;
+        }
     }
     &.selected > .c-kmapnode > .toggle-icon::before {
         background-color: red;
