--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -15,11 +15,10 @@
         }
     }
     h1 {
-        margin: 1rem 0 0.5rem;
-        color: #6faaf1;
+        margin: 1.75rem 0 0.5rem;
         font-weight: bold;
-        font-size: 1.6rem;
-        text-transform: capitalize;
+        font-size: 1.35rem;
+        text-transform: uppercase;
     }
 
     div[class^='lv-']:before {
