--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -21,17 +21,16 @@ body.html {
 a {
     text-decoration: none;
     color: $link-color;
-    border-bottom: 0.25rem dotted #c0c0c0;
+    border-bottom: 0.15rem solid #ccc;
     transition: all 0.3s;
     &:hover {
         text-decoration: none;
         box-shadow: none;
-        border-bottom-style: solid;
-        border-bottom-width: 0.15rem;
+        border-bottom-color: $color-terms;
     }
     &:focus,
     &:active {
-        border: none;
+        border-bottom-style: dashed;
     }
 }
 .btn:not(:disabled):not(.disabled) {
