--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -21,7 +21,7 @@ body.html {
 a {
     text-decoration: none;
     color: $link-color;
-    border-bottom: 0.15rem solid #ccc;
+    border-bottom: 0.15rem dashed #ccc;
     transition: all 0.3s;
     &:hover {
         text-decoration: none;
@@ -30,7 +30,7 @@ a {
     }
     &:focus,
     &:active {
-        border-bottom-style: dashed;
+        border-bottom-style: solid;
     }
 }
 .btn:not(:disabled):not(.disabled) {
