--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -377,6 +377,7 @@
     padding: 0 1rem 0.25rem;
     margin: 0 0.8rem 0.1rem;
     position: relative;
+    line-height: 1.6;
     border-radius: 0.5rem;
     border-left: 0.1rem solid #edf2f7;
 }
