--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -378,6 +378,7 @@
     margin: 0 0.8rem 0.1rem;
     position: relative;
     line-height: 1.6;
+    white-space: nowrap;
     border-radius: 0.5rem;
     border-left: 0.1rem solid #edf2f7;
 }
