--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -158,7 +158,7 @@
     color: #668eec;
 }
 .sui-advTerm {
-    font-size: 1.175rem;
+    font-size: 1.35rem;
     padding: 0.2rem 0.5rem 0.3rem 0;
     margin: 0 0.5rem 0.2rem;
     text-transform: capitalize;
@@ -393,6 +393,11 @@
 .sui-advEditLine.chosen {
     border-right: 0.3rem solid #6b77ea;
     border-radius: 0.5rem 0 0 0.5rem;
+    font-weight: bold;
+    color: #888;
+}
+.sui-advEditLine.chosen:hover {
+    font-style: normal;
 }
 .sui-advEditLine.chosen::after {
     content: '';
@@ -400,7 +405,7 @@
     width: 1rem;
     height: 1rem;
     border-radius: 50%;
-    border: 0.15rem solid #555;
+    border: 0.15rem solid #6b77ea;
     background-color: #6b77ea;
     position: absolute;
     right: 0.75rem;
