--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -63,14 +63,14 @@
                 border: none;
                 border-bottom: 0.1rem solid rgba(77, 89, 201, 0.8); // --- color mandala, w/ opacity
                 margin: 0;
-                width: 26rem;
+                width: 27rem;
                 transition: width 0.5s, border 0.35s;
                 color: #000;
                 box-shadow: none;
                 background: transparent;
 
                 &:placeholder-shown {
-                    cursor: default;
+                    cursor: text;
                 }
                 &:focus,
                 &:active {
